samples/_failures_safe/1761421194_896b03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b84f03a6.c: In function ‘main’:
./samples/SAFE/__tmp_b84f03a6.c:171:25: error: missing terminating " character
  171 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_b84f03a6.c:171:9: error: expected expression at end of input
  171 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_b84f03a6.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b84f03a6.c:171:9: error: expected declaration or statement at end of input
